--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
     <head>
         <script src="script.js"></script>
     </head>
-    <body></body>
+    <body>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </body>
 </html>
