Modified console.logs to DOM methods for displaying game results.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
     </head>
     <body>
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <div id="player-selection">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div id="game-results"></div>
     </body>
     <script src="script.js"></script>
 </html>
