Added 'best out of 5' feature and a page heading

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Rock, Paper, Scissors</title>
     </head>
     <body>
+        <h1 id="page-heading">Best out of 5!</h1>
         <div id="player-selection">
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
             <button id="scissors">Scissors</button>
         </div>
-        <div id="game-results"></div>
+        <div id="results-display">
+            <h3 id="player-score">Player's Score: </h3>
+            <h3 id="computer-score">Computer's Score: </h3>
+            <p id="round-results"></p>
+            <h2 id="game-results"></h2>
+        </div>
     </body>
     <script src="script.js"></script>
 </html>
